# Evaluator_Agent

./: .gitignore  CLAUDE.MD  README.md  README.old.md  docker-compose.yml  fix_graph_routes.py  fix_llm_quality_reviewer.py  main.py  pyproject.toml
app/: config.py  dev_benchmark.py  dev_memory_effect_check.py  graph.py  main.py  schemas.py
app/agents/: metric_collector.py  metric_selector.py  project_parser.py  quality_guard.py  rag_retrieval.py  report_generator.py  type_classifier.py
app/agents/ai_agents/: llm_quality_reviewer.py  llm_repair_planner.py  llm_report_generator.py
app/memory/: report_reflection_memory.backup.md  report_reflection_memory.md
app/prompts/: llm_quality_reviewer_prompt.md  llm_repair_planner_prompt.md  llm_report_prompt.md
app/rag/: __init__.py  bm25_retriever.py  chunk_builder.py  document_loader.py  document_splitter.py  embedding_service.py  health_check.py  hybrid_retriever.py  index_service.py  rag_service.py  reranker.py  vector_store.py
app/tools/: github_client.py  opendigger_client.py  redis_store.py  reflection_memory.py
docs/: api.md  architecture.md  error_handling.md  modules.md  performance.md
knowledge_base/: metrics.md
pictures/: pic.pptx
scripts/: clean_kb_html_to_md.py  expand_linked_official_sources.py  fetch_kb_sources.py  fix_chunker_noise_function.py  patch_clean_kb.py  patch_dashscope_batch.py  patch_issues_closed_source.py  patch_noise_filter.py  patch_rag_template_noise.py  patch_vector_metric_filter.py  render_opendigger_sources_to_md.py
