[project]
name = "evaluator-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "dashscope>=1.25.17",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.2",
    "langchain-chroma>=1.1.0",
    "langchain-deepseek>=1.0.1",
    "langchain-milvus>=0.3.3",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "openai>=2.32.0",
    "pydantic-settings>=2.14.0",
    "pymilvus[milvus-lite]>=2.6.12",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "streamlit>=1.57.0",
    "uvicorn[standard]>=0.46.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
